@@ -7,4 +7,10 @@
 	dh $@  --with python2
 
 get-orig-source:
-	ucsan --verbose --force-download --rename --destdir=../build-area
+	uscan --verbose --force-download --rename --destdir=../build-area
+
+ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
+override_dh_auto_test:
+	noestests
+endif
+
